--- a/src/Projects/Slide.css
+++ b/src/Projects/Slide.css
@@ -12,6 +12,10 @@
   display: block;
 }
 
+/* .slide-active:hover {
+  opacity: 0;
+} */
+
 .slide-hide {
   display: none;
 }
@@ -26,6 +30,10 @@
   transition: all 0.5s;
 }
 
+/* .card:hover {
+  opacity: 0;
+} */
+
 .card-text {
   width: 100%;
   height: 30%;
@@ -37,10 +45,23 @@
   text-shadow: 1px 1px 1px #000, 3px 3px 3px #666;
   text-align: center;
   position: absolute;
+  opacity: 0;
   transition: all 0.5s;
 }
 
+/* .card:hover .card-text {
+  opacity: 1;
+  top: 24%;
+}
+
+.card:hover .card-button {
+  opacity: 1;
+  bottom: 24%;
+  transition: all 0.5s;
+} */
+
 @media screen and (min-width: 600px) {
+
   #gallery .card-text .title {
     font-size: 2.8em;
   }
@@ -55,8 +76,14 @@
 }
 
 .card-button {
+  font-size: 2em;
   opacity: 0;
 }
+
+/* .card-button:hover {
+  background-color: #07BAC2;
+  color: #fff
+} */
 
 .blurb {
   font-size: 0.8em;
@@ -70,7 +97,7 @@
     font-size: 1em;
   }
 
-  #gallery:hover .card-text {
+  /* #gallery:hover .card-text {
     top: 24%;
     opacity: 1;
   }
@@ -78,13 +105,23 @@
   #gallery:hover .card-button {
     bottom: 24%;
     opacity: 1;
+    cursor: pointer;
   }
+
+  #gallery:hover .card {
+    opacity: 0;
+  } */
 }
 
 @media screen and (min-width: 900px) {
 
   button.card-button {
     background-color: transparent;
+  }
+
+  button.card-button:hover {
+    background-color: #07BAC2;
+    color: #fff;
   }
 
 
