--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -5,12 +5,21 @@
   align-items: center;
 }
 
-nav{
+nav.nav-container {
   background-color: #21252E;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 4em;
-  text-align: left;
+  height: 8vh;
   z-index: 99;
+}
+
+@media screen and (max-width: 700px) {
+
+  nav.nav-container {
+    position: fixed;
+    top: 0;
+  }
 }
 
 nav.fixed.desk {
@@ -32,10 +41,9 @@ nav.fixed {
 
 .link-wrap {
   position: initial;
-
 }
 
-nav .link-wrap {
+nav .nav-links {
   width: 100%;
   top: 53px;
   cursor: pointer;
@@ -47,18 +55,91 @@ nav .active {
   text-shadow: 1.3px 1.3px 2.1px #85758B, 0 0 1em #C7C3C9, 0 0 0.2em #C7C3C9;
 }
 
+
+.desk-nav {
+  align-self: flex-start;
+}
+
+.desk-nav > ul.nav-links {
+  display: flex;
+  flex-direction: row;
+}
+
+.desk-nav > ul.nav-links > li.menu-item {
+  padding: 5%;
+  margin: 1%;
+  text-align: center;
+  font-size: 2em;
+}
+
+.desk-nav > ul.nav-links > li.menu-item:hover {
+  color: cyan;
+}
+
 .page-link {
-  color: #9F96A3;
-  display: inline-flex;
   text-decoration: none;
+  padding: 8%;
+  color: #9F96A3;
+  transition: color 0.5s;
+} 
+  /* 
+  width: 100%;
+  display: inline-flex;
+  text-align: center;
   font-size: 1.1em;
   font-weight: 100;
   margin: 0 2%;
   padding: 0 auto;
-  transition: color 0.5s;
-}
+*/
 
 .page-link:hover {
   color: #df1862;
   text-shadow: #eee 2px 0 5px;
-} 
+}
+
+.mobile-nav {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobile-nav > ul.nav-links {
+  position: fixed;
+  padding: 2%;
+  top: 53px;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: #21252E;
+  border-top: 2px solid cyan;
+}
+
+.mobile-nav > ul.nav-links > li.menu-item {
+  text-align: center;
+  padding: 4%;
+  font-size: 1.2em;
+}
+
+@media screen and (min-width: 500px) {
+  
+  .mobile-nav > ul.nav-links > li.menu-item {
+    font-size: 1.5em;
+  }
+}
+
+.mobile-nav > ul.nav-links > li.menu-item > a.page-link {
+}
+
+.mobile-nav > button > i.hamburger {
+  display: block;
+  position: absolute;
+  right: 4%;
+  background-color: grey;
+}
+
+button.hamburger:focus + ul.menu {
+  display: flex;
+}
