--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -26,6 +26,7 @@
   bottom: 2px;
   background-color: #fff;
   z-index: 9999;
+  overflow-y: scroll;
 } 
 
  @media screen and (min-width: 900px) {
@@ -58,12 +59,13 @@
 }
 
 .info-box > .detail {
-  font-size: 1em;
-  line-height: 1.4em;
+  font-size: 0.8em;
+  line-height: 1.3em;
 }
 
 .modal-link-btn {
-  padding: 1%;
+  padding: 3%;
+  margin: 3% 0% 2% 0.5%;
   border-radius: 10px;
   background-color: #df1862;
   color: #FFF;
@@ -71,30 +73,38 @@
   text-shadow: 1px 1px 1px #000, 3px 3px 3px #666;
   justify-content: center;
   text-decoration: none;
-  position: absolute; 
-  bottom: 2%;
-  left: 2%;
+  display: inline-block;
+  /* bottom: 2%;
+  left: 2%; */
 }
 
 /* The close button: absolute positioning on bottom right of the
 // browser window; white background square with a gray X.*/
 .close-modal-btn {
-  position: absolute;
-  bottom: 2%;
-  right: 2%;
+  display: inline-block;
+  right: 3%;
   background: #fff;
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 15px;
-  padding: 2px;
   border: 0;
   cursor: pointer;
   outline: 0;
 }
 
+.close-modal-btn i {
+
+}
+
+.bottom-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
 .close-modal-btn::before .close-modal-btn::after {
   content: "";
-  position: absolute;
+  position: fixed;
   bottom: 1.2rem;
   left: 0.25rem;
   width: 2rem;
