--- a/src/Projects/SliderArrow.css
+++ b/src/Projects/SliderArrow.css
@@ -45,17 +45,18 @@
 @media screen and (min-width: 900px) {
 
   .slider-btn {
-    opacity: 1;  
+    opacity: 1;
+    border: 0.5px solid transparent;
   }
   
   .slider-btn:hover {
     transition: opacity .15s cubic-bezier(.4, 0, 1, 1);
-    border: 0.5px solid grey;
+    border: 0.5px solid #ccc;
     box-shadow:	0px 1px 3px 0px rgba(0, 0, 0, .3);
   }
   
   .slider-btn:hover > i.fa {
-    color: magenta;
+    color: #ccc;
   }
 }
 
